# agentsentinel-landing

./: .env.example  .gitignore  ADMIN_DASHBOARD.md  CNAME  LICENSE  LICENSE.md  README.md  SECURITY.md  SECURITY_AUDIT.md  STRIPE_SETUP.md  docs.html  getting-started.html  index.html  portal.html  pricing-team.html  security.html  success.html
.github/: dependabot.yml
dashboard/: main.html  onboarding.html
docs/: ADMIN_WORKFLOW.md  CUSTOMER_DASHBOARD.md  CUSTOMER_JOURNEY.md  DEPLOYMENT.md  HOSTING_GUIDE.md  OPERATIONAL_RUNBOOKS.md  PRODUCTION_READINESS_AUDIT.md  PRODUCTION_READINESS_REPORT.md  PROMO_CODE_GUIDE.md  README.md  RUNBOOKS.md  SDK_INTEGRATION.md  SDK_INTEGRATION_CHECKLIST.md  SECURITY_CHECKLIST.md  TROUBLESHOOTING.md  admin-dashboard.md  license-key-format.md  sdk-integration.md  setup.md
examples/: anthropic_tools_demo.py  bulletproof_openclaw.py  cost_tracking_demo.py  crewai_demo.py  dashboard_demo.py  langchain_demo.py  llamaindex_demo.py  multi_agent_demo.py  openai_assistants_demo.py  openclaw_integration.py  python_quickstart.py  slack_approval_demo.py  typescript_quickstart.ts
python/: MANIFEST.in  README.md  pyproject.toml
python/agentsentinel/: __init__.py  __main__.py  approval.py  audit.py  cli.py  config_check.py  cost_tracker.py  errors.py  guard.py  inspector.py  licensing.py  network.py  pii.py  policy.py  pricing.py  rate_limit.py  security.py
python/agentsentinel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/agentsentinel/dashboard/: __init__.py  __main__.py  license_api.py  server.py  stripe_webhook.py
python/agentsentinel/dashboard/static/: index.html
python/agentsentinel/dashboard/static/admin/: index.html
python/agentsentinel/dashboard/static/admin/css/: admin.css
python/agentsentinel/dashboard/static/admin/js/: api.js  app.js
python/agentsentinel/dashboard/static/admin/js/components/: modal.js  notifications.js
python/agentsentinel/dashboard/static/admin/js/pages/: audit.js  licenses.js  metrics.js  overview.js  promos.js  system.js  users.js  webhooks.js
python/agentsentinel/dashboard/static/admin/js/utils/: auth.js  format.js  validation.js
python/agentsentinel/dashboard/static/css/: theme-variables.css
python/agentsentinel/dashboard/static/css/themes/: arctic.css  cyberpunk.css  minimal-pro.css  mission-control.css
python/agentsentinel/dashboard/static/js/: license-manager.js  theme-switcher.js
python/agentsentinel/handlers/: __init__.py  slack.py
python/agentsentinel/integrations/: __init__.py  anthropic_tools.py  autogen.py  crewai.py  langchain.py  llamaindex.py  openai_assistants.py
python/agentsentinel/utils/: __init__.py  keygen.py
python/tests/: conftest.py  test_admin_audit.py  test_anthropic_tools.py  test_config_check.py  test_cost_tracker.py  test_crewai.py  test_dashboard_cli.py  test_dashboard_promos.py  test_dashboard_smoke.py  test_guard.py  test_inspector.py  test_licensing_parity.py  test_licensing_security.py  test_llamaindex.py  test_network.py  test_no_localstorage_license_key.py  test_openai_assistants.py  test_pii.py  test_pricing.py
python/tests/fixtures/: license-vectors.json
supabase/: README.md  (+1 more)
(+83 files in other folders)
