[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentsentinel-sdk"
version = "1.2.0"
description = "Safety controls for AI agents — budgets, approvals, rate limits, and audit logs"
readme = "README.md"
license = {text = "BSL-1.1"}
authors = [
    {name = "Leland E. Doss", email = "contact@agentsentinel.net"}
]
keywords = [
    "ai", "agents", "safety", "guardrails", "llm", "openai", "anthropic",
    "langchain", "autogen", "crewai", "llamaindex", "budget", "rate-limit",
    "approval", "audit", "dlp", "pii"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.5.0"]
langchain = ["langchain>=0.1.0"]
slack = ["slack-sdk>=3.0.0"]
all = ["tiktoken>=0.5.0", "langchain>=0.1.0", "slack-sdk>=3.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://agentsentinel.net"
Documentation = "https://docs.agentsentinel.net"
Repository = "https://github.com/ordocaelum/agentsentinel-landing"
Changelog = "https://github.com/ordocaelum/agentsentinel-landing/releases"

[tool.hatch.build.targets.wheel]
packages = ["agentsentinel"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
